{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 88,
  "lineage": "ff5c6111-f3f8-4798-a8c8-fd4ce4f129ce",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:vpc/vpc-0d3320dbb40c01f1e",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dd824b88dff35224",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-da350cbc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3320dbb40c01f1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d460b42fdc5dbc9",
            "owner_id": "603825719481",
            "state": "available",
            "tags": {
              "Name": "ehjs-vpc",
              "createdBy": "ehjs",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ehjs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/ehjs/b7722bf5b154330a",
            "arn_suffix": "app/ehjs/b7722bf5b154330a",
            "dns_name": "ehjs-195095007.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/ehjs/b7722bf5b154330a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ehjs",
            "security_groups": [
              "sg-0cd10cde52afef22b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016853423e0d124d4"
              },
              {
                "subnet_id": "subnet-09bdf34ce9aaaa2d4"
              }
            ],
            "subnets": [
              "subnet-016853423e0d124d4",
              "subnet-09bdf34ce9aaaa2d4"
            ],
            "tags": {
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "ehjs",
              "env": "dev"
            },
            "vpc_id": "vpc-0d3320dbb40c01f1e",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.lb",
            "data.aws_vpc.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:listener/app/ehjs/b7722bf5b154330a/921e00f75e43b9ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/ehjs/5f1a8d496817ca01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:listener/app/ehjs/b7722bf5b154330a/921e00f75e43b9ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:loadbalancer/app/ehjs/b7722bf5b154330a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ehjs",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.lb",
            "data.aws_vpc.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/ehjs/5f1a8d496817ca01",
            "arn_suffix": "targetgroup/ehjs/5f1a8d496817ca01",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:603825719481:targetgroup/ehjs/5f1a8d496817ca01",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ehjs",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:security-group/sg-056cad23a70214c65",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056cad23a70214c65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "603825719481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ehjs"
            },
            "tags_all": {
              "Name": "ehjs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:security-group/sg-0cd10cde52afef22b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd10cde52afef22b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": "",
            "owner_id": "603825719481",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "ehjs",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:internet-gateway/igw-0af2deab16512b77c",
            "id": "igw-0af2deab16512b77c",
            "owner_id": "603825719481",
            "tags": {
              "Name": "ehjs-vpc",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ehjs-vpc",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af2deab16512b77c",
            "id": "r-rtb-07f30890132e3bf141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f30890132e3bf14",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:route-table/rtb-07f30890132e3bf14",
            "id": "rtb-07f30890132e3bf14",
            "owner_id": "603825719481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af2deab16512b77c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ehjs-vpc-public",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ehjs-vpc-public",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f80f0385b746371",
            "route_table_id": "rtb-07f30890132e3bf14",
            "subnet_id": "subnet-09bdf34ce9aaaa2d4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d688eef5ea4e63fa",
            "route_table_id": "rtb-07f30890132e3bf14",
            "subnet_id": "subnet-016853423e0d124d4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:subnet/subnet-09bdf34ce9aaaa2d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09bdf34ce9aaaa2d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "603825719481",
            "tags": {
              "Name": "ehjs-vpc-public-eu-west-1a",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ehjs-vpc-public-eu-west-1a",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:subnet/subnet-016853423e0d124d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-016853423e0d124d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "603825719481",
            "tags": {
              "Name": "ehjs-vpc-public-eu-west-1b",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ehjs-vpc-public-eu-west-1b",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "vpc_id": "vpc-0d3320dbb40c01f1e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:603825719481:vpc/vpc-0d3320dbb40c01f1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-067ecdbb63daa9367",
            "default_route_table_id": "rtb-00d460b42fdc5dbc9",
            "default_security_group_id": "sg-0ec6bf6be5beecf3e",
            "dhcp_options_id": "dopt-da350cbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d3320dbb40c01f1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00d460b42fdc5dbc9",
            "owner_id": "603825719481",
            "tags": {
              "Name": "ehjs-vpc",
              "createdBy": "ehjs",
              "env": "dev"
            },
            "tags_all": {
              "Name": "ehjs-vpc",
              "createdBy": "ehjs",
              "env": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}